<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.MainActivity">
    <item
            android:id="@+id/menuSortByModelButton"
            android:orderInCategory="50"
            android:title="@string/action_sort_by_model_button"
            android:onClick="onSortByModelButtonTap"/>
    <item
            android:id="@+id/menuSortByDateButton"
            android:orderInCategory="50"
            android:title="@string/action_sort_by_date_button"
            android:onClick="onSortByDateButtonTap"/>
    <item
            android:id="@+id/menuDefaultCarsButton"
            android:orderInCategory="50"
            android:title="@string/action_default_data"
            android:onClick="onDefaultButtonTap"
            app:showAsAction="never"/>
    <item
            android:id="@+id/menuExitButton"
            android:orderInCategory="50"
            android:title="Выход"
            android:onClick="onExitButtonTap"
            app:showAsAction="never"/>
</menu>