<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/card_view"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:contentPadding="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp" android:layout_marginLeft="4dp" android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/carClassTextView"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                card_view:layout_constraintStart_toStartOf="@+id/carProducerTextView"
                card_view:layout_constraintTop_toTopOf="@+id/classLabel"
                card_view:layout_constraintBottom_toBottomOf="@+id/classLabel"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/carIndexTextView" android:textSize="16sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorDivider"/>
        <TextView
                android:id="@+id/carModelTextView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryText"
                android:textAllCaps="false"
                android:typeface="sans"
                android:lines="1"
                android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                android:foreground="@android:drawable/divider_horizontal_textfield"
                android:foregroundGravity="fill_horizontal|bottom" android:paddingLeft="20dp" android:gravity="top"/>
        <TextView
                android:id="@+id/carYearTextView"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryText"
                android:textIsSelectable="false"
                card_view:layout_constraintBottom_toBottomOf="@+id/yearLabel"
                card_view:layout_constraintTop_toTopOf="@+id/yearLabel"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                card_view:layout_constraintStart_toStartOf="@+id/carProducerTextView"/>
        <TextView
                android:id="@+id/carIdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorSecondaryText"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                android:visibility="invisible"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/carBodyTypeTextView"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                card_view:layout_constraintTop_toTopOf="@+id/bodyTypeLabel"
                card_view:layout_constraintBottom_toBottomOf="@+id/bodyTypeLabel"
                card_view:layout_constraintStart_toStartOf="@+id/carProducerTextView"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/carProducerTextView"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                card_view:layout_constraintBottom_toBottomOf="@+id/producerLabel"
                card_view:layout_constraintTop_toTopOf="@+id/producerLabel"
                card_view:layout_constraintStart_toEndOf="@+id/producerLabel"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.128" card_view:layout_constraintVertical_bias="0.0"/>
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp" card_view:srcCompat="@drawable/ic_bodytype"
                android:id="@+id/bodyTypeIconImageView"
                card_view:layout_constraintEnd_toStartOf="@+id/bodyTypeLabel"
                android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
                card_view:layout_constraintBottom_toBottomOf="@+id/bodyTypeLabel"
                card_view:layout_constraintTop_toTopOf="@+id/bodyTypeLabel"/>
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp" card_view:srcCompat="@drawable/ic_flag"
                android:id="@+id/producerIconImageView"
                card_view:layout_constraintEnd_toStartOf="@+id/producerLabel"
                android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
                card_view:layout_constraintBottom_toBottomOf="@+id/producerLabel"
                card_view:layout_constraintTop_toTopOf="@+id/producerLabel" android:background="#20FFFFFF"/>
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp" card_view:srcCompat="@drawable/ic_date"
                android:id="@+id/dateIconImageView" card_view:layout_constraintEnd_toStartOf="@+id/yearLabel"
                android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
                card_view:layout_constraintBottom_toBottomOf="@+id/yearLabel"
                card_view:layout_constraintTop_toTopOf="@+id/yearLabel"/>
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp" card_view:srcCompat="@drawable/ic_class"
                android:id="@+id/classIconImageView" card_view:layout_constraintEnd_toStartOf="@+id/classLabel"
                android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
                card_view:layout_constraintBottom_toBottomOf="@+id/classLabel"
                card_view:layout_constraintTop_toTopOf="@+id/classLabel"/>
        <TextView
                android:text="@string/label_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/producerLabel"
                android:textSize="12sp"
                android:layout_marginTop="14dp"
                card_view:layout_constraintTop_toBottomOf="@+id/carModelTextView"
                card_view:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" card_view:layout_constraintHorizontal_bias="0.284"/>
        <TextView
                android:text="@string/label_bodytype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bodyTypeLabel"
                android:textSize="12sp" android:layout_marginTop="2dp"
                card_view:layout_constraintTop_toBottomOf="@+id/producerLabel"
                card_view:layout_constraintStart_toStartOf="@+id/producerLabel"/>
        <TextView
                android:text="@string/label_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yearLabel" android:textSize="12sp"
                android:layout_marginTop="2dp" card_view:layout_constraintTop_toBottomOf="@+id/bodyTypeLabel"
                card_view:layout_constraintStart_toStartOf="@+id/bodyTypeLabel"
        />
        <TextView
                android:text="@string/label_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/classLabel" android:textSize="12sp"
                android:layout_marginTop="2dp" card_view:layout_constraintTop_toBottomOf="@+id/yearLabel"
                card_view:layout_constraintStart_toStartOf="@+id/yearLabel"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>